:construction: Work in progress

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,13 +10,20 @@
         "typeinfo": "cpp"
     },
     "cSpell.words": [
+        "baudrate",
         "BLDC",
         "btns",
         "consts",
+        "keysym",
+        "levelno",
+        "msecs",
+        "msgpack",
         "numaxes",
         "numbuttons",
         "numhats",
         "opcontrol",
-        "pygame"
+        "packb",
+        "pygame",
+        "unpackb"
     ]
 }
