:construction: Work in progress

--- a/initial.yml
+++ b/initial.yml
@@ -68,6 +68,7 @@ rg: # robot_general
 device: {
   # (name):
   #   available: boolean
+  #   display_name: str
   #   type: serial/websocket
   #   watch:
   #   - uuid: str
