:construction: Work in progress

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,13 +8,25 @@
         "type_traits": "cpp",
         "utility": "cpp",
         "typeinfo": "cpp",
-        "*.tcc": "cpp"
+        "*.tcc": "cpp",
+        "deque": "cpp",
+        "unordered_map": "cpp",
+        "vector": "cpp",
+        "exception": "cpp",
+        "fstream": "cpp",
+        "initializer_list": "cpp",
+        "istream": "cpp",
+        "new": "cpp",
+        "sstream": "cpp",
+        "stdexcept": "cpp",
+        "streambuf": "cpp"
     },
     "cSpell.words": [
         "baudrate",
         "BLDC",
         "btns",
         "consts",
+        "getpid",
         "keysym",
         "levelno",
         "msecs",
@@ -24,6 +36,7 @@
         "numhats",
         "opcontrol",
         "packb",
+        "packetizer",
         "pygame",
         "SIGTERM",
         "unpackb",
