--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,11 +26,14 @@
         "BLDC",
         "btns",
         "consts",
+        "DGRAM",
         "getpid",
         "keysym",
+        "levelname",
         "levelno",
         "msecs",
         "msgpack",
+        "msgpacketizer",
         "numaxes",
         "numbuttons",
         "numhats",
@@ -38,6 +41,7 @@
         "packb",
         "packetizer",
         "pygame",
+        "REUSEADDR",
         "SIGTERM",
         "unpackb",
         "websockets"
